Logs added to services.