@@ -2,7 +2,6 @@ package com.emr.ikdemobackend.service;
 
 import com.emr.ikdemobackend.dto.request.RequestDayoffDTO;
 import com.emr.ikdemobackend.dto.response.DayoffDTO;
-import com.emr.ikdemobackend.dto.response.history.DayoffHistoryDTO;
 import com.emr.ikdemobackend.dto.response.history.HistoriesDTO;
 import com.emr.ikdemobackend.entity.Dayoff;
 import com.emr.ikdemobackend.entity.Employee;
@@ -12,6 +11,7 @@ import com.emr.ikdemobackend.mapper.DayoffMapper;
 import com.emr.ikdemobackend.repository.DayoffRepository;
 import com.emr.ikdemobackend.repository.EmployeeRepository;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -19,6 +19,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @AllArgsConstructor
 public class DayoffService {
@@ -28,23 +29,26 @@ public class DayoffService {
     private DayoffRepository dayoffRepository;
 
     public List<DayoffDTO> getAll(){
+        log.info("All Dayoffs listing...");
         return dayoffRepository.findAll()
                 .stream().map(mapper::toDayoffDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public DayoffDTO getDayoff(Long id){
+        log.info("Dayoff " + id + " listing...");
         return dayoffRepository.findById(id)
                 .map(mapper::toDayoffDTO)
-                .orElseThrow(() -> new DayoffNotFoundException("This Dayoff not found in system."));
+                .orElseThrow(DayoffNotFoundException::new);
     }
 
     public DayoffDTO addDayoff(RequestDayoffDTO requestDayoffDTO){
         Employee employee = employeeRepository
                 .findByNationalId(requestDayoffDTO.getEmployeeNationalId())
-                .orElseThrow(()->new EmployeeNotFoundException("This employee not found in system"));
+                .orElseThrow(DayoffNotFoundException::new);
         Dayoff dayoff = mapper.toDayoffFromRequestDayoffDTO(requestDayoffDTO);
         dayoff.setEmployee(employee);
+        log.info("Dayoff adding...");
         return mapper.toDayoffDTO(dayoffRepository.save(dayoff));
     }
 
@@ -61,9 +65,9 @@ public class DayoffService {
             dayoff.setLeaveType(mappedDayoff.getLeaveType());
             dayoffRepository.save(dayoff);
         });
-
+        log.info("Dayoff updating...");
         return dayoffById.map(mapper::toDayoffDTO)
-                .orElseThrow(() -> new DayoffNotFoundException("This Dayoff not found in system."));
+                .orElseThrow(DayoffNotFoundException::new);
     }
 
     public DayoffDTO deleteDayoff(Long id){
@@ -71,11 +75,13 @@ public class DayoffService {
 
         dayoffById.ifPresent(dayoffRepository::delete);
 
+        log.info("Dayoff deleting...");
         return dayoffById.map(mapper::toDayoffDTO)
-                .orElseThrow(() -> new DayoffNotFoundException("This Dayoff not found in system."));
+                .orElseThrow(DayoffNotFoundException::new);
     }
 
     public Set<HistoriesDTO> getDayoffHistory(){
+        log.info("Dayoff history getting.");
         return dayoffRepository.findAll()
                 .stream().map(mapper::toHistoryDTO)
                 .collect(Collectors.toSet());
